Fixed Scrollbar on search page

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -31,7 +31,18 @@ $transition-cubic-bezier-500: 500ms cubic-bezier(0.165, 0.84, 0.44, 1);
   --main-banner-height: 2.5rem;
   --sample-upload-height: 1.5rem;
   --mobile-footer-height: 2.5rem;
+  
+  --sortable-table-column-name-height: 1.5rem;
+  --sortable-table-search-container-height: 2rem;
+
+  --sortable-table-header-height: 
+    calc(
+      var(--sortable-table-column-name-height) 
+      + var(--sortable-table-search-container-height)
+    );
+  
   --default-search-header-height: 0rem;
+
   --sample-search-header-height: 3.5rem;
 
   --font-sm: 0.8rem;
